# nazca

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
claudedocs/: research_cli-credential-storage_2026-06-19.md  research_interactive-cli-tui_2026-06-19.md  research_media-providers-and-cheap-models_2026-06-18.md
docs/: LEARNINGS.md  batch-followups.md  media-modalities.md  plan-multi-provider.md  throughput-and-rate-limits.md  throughput-implementation-plan.md  vertex-models.md
scripts/: gen_looks.py  halftone_nazca.py  install.sh
src/mediagen/: __init__.py  cli.py  config.py  credstore.py  image.py  vertex.py  video.py
src/mediagen/backends/: __init__.py  base.py  fal.py  modelark.py  vertex.py
src/nazca/: __init__.py  audio.py  batch.py  capabilities.py  cli.py  config.py  cost.py  credstore.py  errors.py  grade.py  image.py  log.py  mcp_server.py  media.py  models.py  registry.py  request.py  resolve.py  retry.py  setup.py  threed.py  vertex.py  vertex_batch.py  video.py
src/nazca/backends/: __init__.py  atlas.py  base.py  error_hints.py  fal.py  modelark.py  openai.py  vertex.py
src/nazca/luts/: cool-matte.cube  faded-film.cube  golden-hour.cube  neutral-contrast.cube  warm-editorial.cube
tests/: test_atlas_3d.py  test_atlas_audio.py  test_atlas_cost.py  test_atlas_slugs.py  test_backend_contract.py  test_batch.py  test_capabilities.py  test_cli_helpers.py  test_config.py  test_cost.py  test_error_hints.py  test_grade.py  test_live.py  test_logging.py  test_modality_routing.py  test_models.py  test_modify_ops.py  test_output_format.py  test_resolve.py  test_retry.py  test_seedream.py  test_try_on.py  test_vertex_batch.py  test_video_edit.py
