[project]
name = "nazca"
version = "0.7.1"
description = "Thin, Claude-driven, capability-aware CLI for AI image + video generation and editing across Vertex (Gemini/Imagen/Veo), fal, and ModelArk"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "click>=8.1",
    "Pillow>=10.0",
]
# No provider SDKs / API keys: image + video both use gcloud auth + Vertex REST.

[project.optional-dependencies]
tui = ["questionary>=2.0"]
# MCP server (Claude Desktop / any MCP client). Install with: nazca[mcp]
# google-auth lets the server mint tokens from ADC without the gcloud binary on
# PATH — essential under Claude Desktop's minimal-env subprocess launch.
mcp = ["mcp>=1.2", "google-auth>=2.0"]

[project.scripts]
nazca = "nazca.cli:cli"
# MCP stdio server — only importable when the [mcp] extra is installed.
nazca-mcp = "nazca.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nazca"]

[tool.pytest.ini_options]
# Exclude live tests from the default run so `pytest` never makes network calls.
# Opt in with:  pytest -m live
addopts = "-m 'not live'"
markers = [
    "live: smoke tests that make real network calls — require provider credentials",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# E501 (line length) left to formatting, not the linter — existing code uses long
# aligned comments and click help strings intentionally.
ignore = ["E501"]
